--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -25,6 +25,19 @@
 \usepackage{amsmath,amssymb}
 \usepackage{slashed}
 \usepackage{feynmp}
+% begin feynman diagram setup
+\usepackage{feynmp-auto}
+% before setting default graphics include widths, save the default to properly scale feynman diagrams with their labels
+\makeatletter
+\let\ginnatwidth\Gin@nat@width
+\let\ginnatheight\Gin@nat@height
+\makeatother
+\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
+%if you don't use the feynmandiagram environment for feynmf/mp figures, and you've changed the Gin keys above, then you need to manually adjust the unit length for feynman diagrams to get ratio of tex labels to graphics right. \unitlength = 1.21mm for tufte \linewidth and \textheight
+\DeclareGraphicsRule{*}{mps}{*}{}
+\newenvironment{feynmandiagram}[1][]{\setkeys{Gin}{width=\ginnatwidth,totalheight=\ginnatheight}\begin{fmffile}{#1}
+\begin{fmfgraph*}(100,70)\fmfpen{thick}}{\end{fmfgraph*}\end{fmffile}\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}}
+% end feynman diagram setup
 \usepackage{subfig}
 \DeclareGraphicsRule{*}{mps}{*}{}
 
@@ -171,7 +184,7 @@
 
 \input{frontmatter.tex}
 
-\blankpage
+\pagebreak
 
 %\ifNotMonojetTTBarOnly
 \chapter{Introduction}
