--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -1,7 +1,7 @@
 
 % text initially from Amelia Brennan (amelia.jean.brennan@cern.ch)
 
-An alternative set of simplified models exist where the mediator is exchanged in the $t$-channel, thereby coupling the quark and dark matter particle directly. Under the assumption that $\chi$ is a Standard Model (SM) singlet, the mediating particle, labeled $\phi$, is necessarily charged and coloured. This model is parallel to, and partially motivated by, the squark of the MSSM, but in this case the $\chi$ is chosen to be Dirac. Following the example of Ref.~\cite{Papucci:2014}, the interaction Lagrangian is written as
+An alternative set of simplified models exist where the mediator is exchanged in the $t$-channel, thereby coupling the quark and dark matter particle directly. Under the assumption that $\chi$ is a Standard Model (SM) singlet, the mediating particle, labeled $\phi$, is necessarily charged and coloured. This model is parallel to, and partially motivated by, the squark of the MSSM, but in this case the $\chi$ is chosen to be Dirac. An important difference with respect to the MSSM is that {\bf [illustrate that diagram is no longer forced to be small. Should forum provide formulae to relate our parameters to MSSM searches?]}. Following the example of Ref.~\cite{Papucci:2014}, the interaction Lagrangian is written as
 
 \begin{equation}
 \mathcal{L}_{\mathrm{int}} = g \sum_{i=1,2,3} (\phi_L^i \bar{Q}_L^i + \phi_{uR}^i \bar{u}_R^i + \phi_{dR}^i \bar{d}_R^i) \chi
